--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,8 +34,10 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   font_awesome_flutter: ^9.2.0
+  flutter_secure_storage: ^5.0.2
 
 dev_dependencies:
+  http:
   flutter_test:
     sdk: flutter
 
