--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   font_awesome_flutter: ^9.2.0
   flutter_secure_storage: ^5.0.2
+  snapping_sheet: ^3.1.0
+  google_maps_flutter: ^2.1.3
 
 dev_dependencies:
   http:
