--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   flutter_secure_storage: ^5.0.2
   snapping_sheet: ^3.1.0
   google_maps_flutter: ^2.1.3
+  get_it: ^7.2.0
 
 dev_dependencies:
   http:
