--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   snapping_sheet: ^3.1.0
   google_maps_flutter: ^2.1.3
   get_it: ^7.2.0
+  uuid: ^3.0.6
+  google_place: ^0.4.7
 
 dev_dependencies:
   http:
